--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
   <link rel="stylesheet" href="//at.alicdn.com/t/font_830376_qzecyukz0s.css">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-  <title>律所会见管理系统</title>
+  <title>传成后台管理系统</title>
 </head>
 
 <body>
